Added all_suppliers page in supply_teachers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -503,3 +503,7 @@ en:
         mark_up_html: A %{mark_up} mark-up is charged if you use the agency to hire a specific person for you (a ‘nominated worker’).
         one_vendor_found_html: There is only one neutral vendor on this framework.
         page_title: Neutral vendor managed service providers
+      all_suppliers:
+        page_title: Agency list
+        header: Agency list
+        markup: Mark-up
