Added some rudimentary pagination, accreditation body label, rates and services they provide

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -507,3 +507,5 @@ en:
         page_title: Agency list
         header: Agency list
         markup: Mark-up
+        column1: Job type
+        column2: Agency mark-up
