--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -231,12 +231,6 @@ en:
         find_2_legend: Does your organisation have a Digital Apprenticeship Service (DAS) account? 
       find_apprentices3:
         outline_your_training: For example, the apprenticeship standard, level and specific requirements from the training provider
-      find_apprentices4: 
-        find_apprenticeship-std: Find an apprenticeship standard 
-        find_apprenticeship-tab-title: Search or browse tabs
-        search_label: Keyword search 
-        browse_tab_label: Browse 
-        search_tab_label: Search
         outline_your_training_hint: Briefly outline your training requirements
       find_apprentices4: 
         find_apprenticeship-std: Find an apprenticeship standard 
@@ -244,7 +238,7 @@ en:
         search_label: Keyword search 
         browse_tab_label: Browse 
         search_tab_label: Search
-
+        outline_your_training_hint: Briefly outline your training requirements
     page_section: Find apprenticeship training and related services
     
 
@@ -253,6 +247,7 @@ en:
     submit: Continue 
     continue: Continue
     browse: Browse
+    search: Search
   errors:
     '404':
       explanation: You may have mistyped the address or the page may have moved.
