--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,10 +127,10 @@ en:
         title_browse_by_route: Browse by route
       find_apprentices5:
         building: Building
-        page_title: Apprenticeship standard
-        provider_information_title: Summary of this apprenticeship standard
-      find_apprentices6:
-        page_title: Apprenticeship requirements
+        button_label: Add requirements and find training providers
+        title_caption: Apprenticeship training course
+        
+        provider_information_title: Summary of this apprenticeship course
       index:
         before_you_start: Before you start
         belong_to_a_public_sector_organisation_html: belong to a public sector organisation and have a <a href="%{url}" class="govuk-link">Digital Apprenticeship Service</a> (DAS) account.
