Fixed styling for all suppliers page, except for pagination

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -485,8 +485,9 @@ en:
         branch: Branch
         column1: Job type
         column2: Agency mark-up
-        header: Agency list
-        page_title: Agency list
+        header: All agencies
+        page_title: All agencies
+        results_found_with_location_html: "There are <strong>%{results} agencies</strong> currently available"
       master_vendor:
         column1: Job type
         column2: Agency mark-up
