page title tags added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,8 +109,10 @@ en:
     home:
       find_apprentices:
         find_1_legend: Do you know the apprenticeship standard that you would like training for?
+        page_title: Which training course
       find_apprentices2:
         find_2_legend: Does your organisation have a Digital Apprenticeship Service (DAS) account?
+        page_title: Do you have a DAS account
       find_apprentices3:
         outline_your_training: For example, the apprenticeship standard, level and specific requirements from the training provider
         outline_your_training_hint: Briefly outline your training requirements
@@ -136,6 +138,7 @@ en:
         know_how_you_would_like_the_training_to_be_delivered: know how you would like the training to be delivered
         know_the_apprenticeship_standards: know the apprenticeship standard(s) that you need training for
         know_weather_you_would_like_shared_training: know whether you would like shared training, or training just for your own apprentices - shared training can increase a number of suppliers available to you
+        page_title: Find apprenticeship training providers
         this_service_generate_shortlist_html: This service will help you generate a shortlist of training providers that will only be valid for 48<abbr title="hours">hrs</abbr>, as supplier information is continually being updated.
         title: Find apprenticeship training and related services
         use_this_service_to:
@@ -150,7 +153,9 @@ en:
         answer_worker: Lorem ipsum 3
         page_title: Looking for
         question: question 1 txt
-        question2: question 2 txt
+        question2: question 2 txt 
+      requirement:
+        page_title: Add your requirements
       requirements:
         page_title: Apprenticeship requirements
         requirements_btn_text: Find training providers
