--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -243,6 +243,10 @@ en:
     next: Next
     search: Search
     submit: Continue
+  companies:
+    unit:
+      one: company
+      other: companies
   errors:
     '404':
       explanation: You may have mistyped the address or the page may have moved.
@@ -358,7 +362,7 @@ en:
         question: What services will you require?
     suppliers:
       index:
-        suppliers_found_html: "<strong>%{suppliers}</strong> found"
+        suppliers_found_html: "<span class='govuk-!-font-size-27 govuk-!-font-weight-bold'>%{number}</span> <span class='govuk-!-font-weight-bold'>%{suppliers}</span> that can provide consultants who can meet your requirements"
       supplier:
         contact_email_missing: Contact email not available
         contact_name_missing: Contact name not available
