AT-73 and AT-74 WIP

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -234,19 +234,31 @@ en:
         address_title: Address
         contact_details_title: Contact details
         email_title: Email
-        experience_in_delivering_apprenticeships: Experience in delivering apprenticeships
+        experience_in_delivering_apprenticeships_tbl: Experience in delivering apprenticeships
         national_provider_tag: National provider
         other_apprenticeship_standards_title: Other apprenticeship standards this provider delivers
-        overall_ofsted_rating: Overall Ofsted rating
+        overall_ofsted_rating_tbl: Overall Ofsted rating
         page_title: Training provider details
         phone_number_title: Phone number
         provider_information_title: Provider information
         provider_statement: This training provider offers apprenticeship training across England.
-        recruitment_support: Recruitment support
+        recruitment_support_tbl: Recruitment support
         training_course_information_title: Training course information
         training_provider_details_hint: Training provider details
         training_provider_tab_title: Training provider details tabs
-        website_title: Website
+        website_title: Website 
+        provider_information_title: Provider information details
+        training_course_information_title: Training course information 
+        provider_information_summary: Provider information summary
+        training_course_information_summary: Training course summary 
+        apprenticeship_tbl: Apprenticeship 
+        ofsted_rating_for_apprenticeships_tbl: Ofsted rating for apprenticeships 
+        level_tbl: Level 
+        duration_tbl: Duration 
+        maximum_funding_tbl: Maximum funding 
+        ability_to_customise_tbl: Ability to customise 
+        experience_in_this_apprenticeship_tbl: Experience in this apprenticeship 
+        about_the_apprenticeship_title: About the apprenticeship
       training_information:
         page_title: Training information
       understanding:
